(library
 (name kafka_eio)
 (public_name kafka_eio)
 (libraries kafka eio)
 ; the -I and -L flags are required for freebsd, harmless elsewhere
 (foreign_stubs
  (language c)
  (names ocaml_eio_kafka)
  (flags -I/usr/local/include -Wall -Werror))
 (c_library_flags -L/usr/local/lib -lrdkafka))

(copy_files ../lib/ocaml_kafka.h)
